FIX issue - Firefox not showing black font color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
-#__next {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-} */
-
-/* ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-li {
-  padding-left: 36px;
-  background-image: url("/checkBronze.png");
-  background-repeat: no-repeat;
-  background-position: 0.5rem -0.2rem;
-  background-size: 24px 24px;
-} */
 
 :root {
   box-sizing: border-box;
   --background: #ffffff;
   --foreground: #171717;
   height: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -36,14 +19,21 @@ li {
 }
 
 body {
-  /* position: relative; */
   max-width: 100vw;
   height: 100%;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+/* Nav text shadow */
 .navH1 {
   text-shadow: 2px 2px 4px #fff;
+}
+
+.firefox {
+  color: black;
+  font-weight: normal;
 }
